--- a/WebContent/styles.css
+++ b/WebContent/styles.css
@@ -5,17 +5,19 @@
 @import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
 
 html, body {
-	color: #111111;
+	color:#111111;
 	font-family: "Noto Sans JP", "游ゴシック Medium", "游ゴシック";
 	font-size: large;
-	font-weight: 700;
+	font-weight:700;
 	margin: 0;
+	height: 88%;
 }
 
 
-h1 {
-	display: inline;
-
+h1:first-letter{
+display:inline;
+font-size:2em;
+color:#000066;
 }
 
 h2 {
@@ -34,7 +36,9 @@ h3 {
 	background-color: #FFCC00;
 	width: 100%;
 	height: 110px;
-	font-family: "arial black";
+	font-family:'arial black';
+	font-size:70px;
+	color:white;
 }
 /*フッター*/
 #footer {
@@ -44,16 +48,18 @@ h3 {
 	background-color: #FFCC00;
 	width: 100%;
 	height: 50px;
+	color:white;
 }
 
 #wrapper {
 	width: 100%; /* 幅をウィンドウサイズに合わせて100％に指定 */
-	max-width: 900px; /* 追加：幅は最大で800pxまで広がるようにする */
+	max-width: 1100px; /* 追加：幅は最大で800pxまで広がるようにする */
 	min-width: 300px; /* 追加：幅は最小で300pxまで狭まるようにする */
+	min-height: 100%;
 	margin: 0 auto;
-	margin-top: 110px;
+	margin-top: 100px;
 	background: white;
-	padding: 0 0 50px;
+	/*padding: 0 0 50px;*/
 	/*overflow:auto;*/
 	/*border:1px solid black;*/
 }
@@ -93,8 +99,8 @@ form, fieldset {
 /*メニューボタンの配置*/
 .controls {
 	float: right;
-	margin-top: 25px;
-	margin-right: 80px;
+	margin-top: 20px;
+	margin-right: 70px;
 }
 /*回り込み防止*/
 center {
@@ -106,15 +112,16 @@ button::before, button::after {
 	box-sizing: border-box;
 }
 
+/*ボタンデザイン.メニュー、戻る、月間、年間 etc...*/
 .buttonA {
 	margin: 3px 3px 3px 3px;
 	border: none;
 	box-sizing: border-box;
-	width: 100px;
-	height: 50px;
+	width: 110px;
+	height: 65px;
 	display: inline-block;
-	font-size: 18px;
-	font-weight: bold;
+	font-size: 19px;
+	font-weight: bolder;
 	position: relative;
 	cursor: pointer;
 	position: relative;
@@ -138,77 +145,80 @@ button::before, button::after {
 	box-shadow: none
 }
 
+/*テーブルの中のボタン*/
 .buttonB {
-	width: 100px;
-	height: 30px;
-	border: 1px solid #15aeec;
-	background-color: #49c0f0;
-	background-image: -webkit-linear-gradient(top, #49c0f0, #2cafe3);
-	background-image: linear-gradient(to bottom, #49c0f0, #2cafe3);
+	margin: 3px 3px 3px 3px;
+	border: none;
+	box-sizing: border-box;
+	width: 110px;
+	height: 45px;
+	display: inline-block;
+	font-size: 18px;
+	font-weight: bold;
+	position: relative;
+	cursor: pointer;
+	position: relative;
+	background-color: #0056af;
 	border-radius: 4px;
 	color: #fff;
-	font-size: 18px;
-	/*line-height: 50px;*/
+	/*line-height: 52px;*/
 	-webkit-transition: none;
 	transition: none;
+	box-shadow: 0 3px 0 #000066;
 	text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
-	margin-right: 35px;
-	float: right;
 }
 /*ボタンにカーソルを合わせた時の色*/
 .buttonB:hover {
-	border: 1px solid #1090c3;
-	background-color: #1ab0ec;
-	background-image: -webkit-linear-gradient(top, #1ab0ec, #1a92c2);
-	background-image: linear-gradient(to bottom, #1ab0ec, #1a92c2);
+	background-color: #0056af;
+	box-shadow: 0 3px 0 #000066
 }
 /*ボタンを押したときのアクション*/
 .buttonB:active {
-	background: #1a92c2;
-	box-shadow: inset 0 3px 5px rgba(0, 0, 0, .2);
-	color: #1679a1;
-	text-shadow: 0 1px 1px rgba(255, 255, 255, .5);
+	top: 3px;
+	box-shadow: none
 }
 
+/*検索のボタン*/
 .buttonC {
-	width: 100px;
-	height: 30px;
-	border: 1px solid #15aeec;
-	background-color: #49c0f0;
-	background-image: -webkit-linear-gradient(top, #49c0f0, #2cafe3);
-	background-image: linear-gradient(to bottom, #49c0f0, #2cafe3);
+	margin: 3px 3px 3px 3px;
+	border: none;
+	box-sizing: border-box;
+	width: 90px;
+	height: 40px;
+	display: inline-block;
+	font-size: 18px;
+	font-weight: bold;
+	position: relative;
+	cursor: pointer;
+	position: relative;
+	background-color: #0056af;
 	border-radius: 4px;
 	color: #fff;
-	font-size: 18px;
-	/*line-height: 50px;*/
+	/*line-height: 52px;*/
 	-webkit-transition: none;
 	transition: none;
+	box-shadow: 0 3px 0 #000066;
 	text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
-	margin-right: 35px;
-	float: right;
 }
 /*ボタンにカーソルを合わせた時の色*/
 .buttonC:hover {
-	border: 1px solid #1090c3;
-	background-color: #1ab0ec;
-	background-image: -webkit-linear-gradient(top, #1ab0ec, #1a92c2);
-	background-image: linear-gradient(to bottom, #1ab0ec, #1a92c2);
+	background-color: #0056af;
+	box-shadow: 0 3px 0 #000066
 }
 /*ボタンを押したときのアクション*/
 .buttonC:active {
-	background: #1a92c2;
-	box-shadow: inset 0 3px 5px rgba(0, 0, 0, .2);
-	color: #1679a1;
-	text-shadow: 0 1px 1px rgba(255, 255, 255, .5);
+	top: 3px;
+	box-shadow: none
 }
+
 
 /*テキストフォームデザイン*/
 .text {
 	border: 0;
 	font-size: 1em;
 	font-family: Arial, sans-serif;
-	color: #444444;
-	border: solid 1px #ccc;
+	color: #333333;
+	border: solid 1px #666666;
 	padding: 0;
 	/*margin:0 0 0px;*/
 	width: 150px;
@@ -222,7 +232,7 @@ select {
 	width: 152px;
 	font-size: 0.9em;
 	color: #444444;
-	border: 1px solid #ccc;
+	border: 1px solid #666666;
 	background: Transparent;
 	-moz-box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
 	-webkit-box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
@@ -253,7 +263,7 @@ select {
 	height: 16px;
 	margin-top: -13px;
 	background: #fff;
-	border: 1px solid #ccc;
+	border: 1px solid #666666;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
@@ -275,37 +285,37 @@ select {
 }
 
 /*メニューボタンのデザイン*/
-.square_btn {
-	display: inline-block;
-	padding: 0.5em 0.5em 0.5em 0.5em;
-	width: 140px;
-	height: 140px;
-	font-weight: 900;
-	font-size: 20px;
-	text-decoration: none;
-	background: #000080; /*ボタン色*/
-	color: #fff;
-	border-bottom: solid 4px #627295;
-	border-radius: 3px;
+.square_btn{
+    display: inline-block;
+    padding: 0.5em 0.5em 0.5em 0.5em;
+    width:200px;
+    height:200px;
+    font-weight: 900;
+    font-size: 29px;
+    text-decoration: none;
+    background:#0056af;/*ボタン色*/
+    color:#fff;
+    border-bottom: solid 4px #000022;
+    border-radius: 15px;
 }
 
-.square_btn:hover { /*ボタンを押したとき*/
-	-ms-transform: translateY(4px);
-	-webkit-transform: translateY(4px);
-	transform: translateY(4px); /*下に動く*/
-	border-bottom: none; /*線を消す*/
+.square_btn:hover {/*ボタンを押したとき*/
+    -ms-transform: translateY(4px);
+    -webkit-transform: translateY(4px);
+    transform: translateY(5px);/*下に動く*/
+    border-bottom: none;/*線を消す*/
 }
 
 /*囲み枠のデザイン*/
 /*新規登録、売上*/
 #Enclose {
 	margin: 0 auto;
-	margin-top: 100px;
+	margin-top: 30px;
 	padding: 20px;
-	width: 480px;
+	width: 460px;
 	height: 400px;
 	/*二重線枠*/
-	border: 10px double #CCCCCC;
+	border: 10px double #000066;
 	    margin: 3em 0;
 	    padding: 3em;
 
@@ -322,10 +332,10 @@ select {
 	margin: 0 auto;
 	margin-top: 100px;
 	padding: 20px;
-	width: 480px;
+	width: 500px;
 	height: 200px;
 	/*二重線枠*/
-	border: 10px double #CCCCCC;
+	border: 10px double #000066;
 	    margin: 2em 0;
 	    padding: 2em;
 }
@@ -334,11 +344,11 @@ select {
 /*在庫、*/
 #Enclose3 {
 	margin: 0 auto;
-	margin-top: 70px;
+	/*margin-top: 70px;*/
 	padding: 20px;
 	width: 470px;
 	height: 250px;
-	border: 10px double #CCCCCC;
+	border: 10px double #000066;
 	    margin: 2em 0;
 	    padding: 2em;
 }
@@ -347,11 +357,11 @@ select {
 /*発注、売上一覧、商品一覧*/
 #Enclose4 {
 	margin: 0 auto;
-	margin-top: 50px;
+	/*margin-top: 50px;*/
 	padding: 10px;
 	width: 455px;
 	height: 200px;
-	border: 10px double #CCCCCC;
+	border: 10px double #000066;
 	    margin: 2em 0;
 	    padding: 2em;
 }
@@ -359,11 +369,11 @@ select {
 /*売上の月間、年間*/
 #Enclose5 {
 	margin: 0 auto;
-	margin-top: 50px;
+	/*margin-top: 50px;*/
 	padding: 20px;
 	width: 400px;
 	height: 160px;
-	border: 10px double #CCCCCC;
+	border: 10px double #000066;
 	    margin: 2em 0;
 	    padding: 2em;
 }
