--- a/WebContent/styles.css
+++ b/WebContent/styles.css
@@ -229,6 +229,34 @@ button::before, button::after {
 	border-radius: 4px;
 }
 
+.text1 {
+	border: 0;
+	font-size: 1em;
+	font-family: Arial, sans-serif;
+	color: #333333;
+	border: solid 1px #666666;
+	padding: 0;
+	/*margin:0 0 0px;*/
+	width: 50px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 4px;
+}
+
+.text2 {
+	border: 0;
+	font-size: 1em;
+	font-family: Arial, sans-serif;
+	color: #333333;
+	border: solid 1px #666666;
+	padding: 0;
+	/*margin:0 0 0px;*/
+	width: 90px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 4px;
+}
+
 /*セレクトボックスデザイン*/
 select {
 	width: 152px;
@@ -239,6 +267,7 @@ select {
 	-moz-box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
 	-webkit-box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
 	box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
+	border-radius:4px; /* 角丸 */
 }
 
 /* チェックボックスデザイン*/
@@ -261,29 +290,27 @@ select {
 	content: '';
 	top: 60%;
 	left: 0;
-	width: 16px;
-	height: 16px;
-	margin-top: -13px;
+	width: 19px;
+	height: 19px;
+	margin-top: -16px;
 	background: #fff;
 	border: 1px solid #666666;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
-	width: 16px;
-	left: 0;
 }
 
 .chkbox input[type="checkbox"]:checked+label::after {
 	position: absolute;
 	content: '';
-	top: -7px;
+	top: -10px;
 	left: 3px;
-	width: 13px;
-	height: 5px;
+	width: 15px;
+	height: 7px;
 	border-left: 2px solid #444444;
 	border-bottom: 2px solid #444444;
 	-webkit-transform: rotate(-45deg);
-	transform: rotate(-45deg);
+	transform: rotate(-50deg);
 }
 
 /*メニューボタンのデザイン*/
@@ -315,7 +342,7 @@ select {
 	margin-top: 30px;
 	padding: 20px;
 	width: 460px;
-	height: 400px;
+	height: 405px;
 	/*二重線枠*/
 	border: 10px double #000066;
 	    margin: 3em 0;
@@ -389,6 +416,13 @@ select {
 /*検索条件を並べる*/
 ul li {
 	list-style: none;
+	margin:0 auto;
+	/*text-align:center;*/
+}
+
+ul.center {
+	text-align:center;
+	width: 410px;
 }
 
 ul label {
@@ -397,6 +431,8 @@ ul label {
 }
 
 ul {
-	width: 410px;
 	margin: 0 auto;
+	display: table;
+	padding: 0;
 }
+
